--- a/src/Assignment-2/assignment2.html
+++ b/src/Assignment-2/assignment2.html
@@ -12,6 +12,59 @@
 	<div id="container">
 
 	<!-- Start your code from here -->
+	<header>
+		<div class ="row1">
+		  <img src = "https://images.unsplash.com/photo-1602934445884-da0fa1c9d3b3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGxvZ298ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" >
+		  <form>
+			<input type-text ="name" placeholder="search"></input>
+		  </form> 
+		</div>
+		<nav>
+		  <a href="">Section1</a>    
+		  <a href="">Section2</a>    
+		  <a href="">Section3</a>    
+		  <a href="">Section4</a> 
+		</nav>
+	  </header>
+	  <div class="div">
+	  <aside-left class="aside-left">
+		<ul>Section1</ul>
+		<ul>Section2</ul>
+		<ul>Section3</ul>
+		<ul>Section4</ul>
+		<ul>Section5</ul>
+		<ul>Section6</ul>
+		<ul>Section7</ul>
+		<ul>Section8</ul>
+		<ul>Section9</ul>
+		<ul>Section10</ul>
+	  </aside-left>
+	  
+	  <section id="main-content-section">
+		<img class = "post-img" src="https://images.unsplash.com/photo-1596133947161-dc4c4e6077a3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDI1fGJvOGpRS1RhRTBZfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+		<img class = "post-img" src="https://images.unsplash.com/photo-1596133947161-dc4c4e6077a3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDI1fGJvOGpRS1RhRTBZfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+		<img class = "post-img" src="https://images.unsplash.com/photo-1596133947161-dc4c4e6077a3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDI1fGJvOGpRS1RhRTBZfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+		<img class = "post-img" src="https://images.unsplash.com/photo-1596133947161-dc4c4e6077a3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDI1fGJvOGpRS1RhRTBZfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+		<img class = "post-img" src="https://images.unsplash.com/photo-1596133947161-dc4c4e6077a3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDI1fGJvOGpRS1RhRTBZfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+		<img class = "post-img" src="https://images.unsplash.com/photo-1596133947161-dc4c4e6077a3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDI1fGJvOGpRS1RhRTBZfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+	  </section>
+	  
+	  <aside-right id="right-sidebar-menu">
+		<ul>Feature1</ul>
+		<ul>Feature2</ul>
+		<ul>Feature3</ul>
+		<ul>Feature4</ul>
+		<ul>Feature5</ul>
+		<ul>Feature6</ul>
+	  </aside-right>
+	  </div>
+	  <footer id="page-footer">
+		<p>
+		  The Chennai Super Kings (CSK) registered their first victory in the TATA Indian Premier League (IPL) 2022 after defeating the Royal Challengers Bangalore (RCB) by 23 runs on Tuesday at the DY Patil Stadium in Navi Mumbai.CSK reached a massive total of 216/4 thanks to Shivam Dube's 95* and Robin Uthappa's 88, before Maheesh Theekshana's fantastic four-wicket haul helped CSK secure their first win of the season.
+		  Chasing a gigantic target of 217, RCB lost an early wicket of skipper Faf du Plessis, who was caught in the deep as Maheesh Theekshana scalped maiden IPL wicket. CSK bowlers scalped two more wickets inside the powerplay. While Virat Kohli was caught in the deep off Mukesh Chaudhary’s bowling, Theekshana trapped Anuj Rawat LBW.
+		  Glenn Maxwell scored a quick-fire 26 off 11 deliveries before Jadeja crashed a delivery into the stumps to end the right-handed batter’s innings. Suyash Prabhudessai and Shahbaz Ahmed led RCB’s recovery and stitched a fine fifty partnership. Prabhudessai did the majority of the hitting and RCB were 110-4 with 8 overs to go. 
+		</p>
+	  </footer>
 	
 
 	<!-- End your code -->
