--- a/src/Assignment-3/assignment3.html
+++ b/src/Assignment-3/assignment3.html
@@ -12,7 +12,36 @@
 	<div id="container">
 
 	<!-- Start your code from here -->
-	
+	<div class ="full-width-container">
+        <div class="column">
+        <h1>Your Best Value Proposition</h1>
+        <br>
+        <p>we can use this space to write our content. This is a paragraph coming after the heading. 
+            For this, we are using paragraph tag.we can use this space to write our content. This is a paragraph coming after the heading. 
+            For this, we are using paragraph tag.</p>
+            <br>
+        <button class="button"  placeholder="">Get Started</button>
+        </div>
+        <div class="column2">
+            <iframe src="https://en.wikipedia.org/wiki/Wikipedia" id="render-wiki"></iframe>
+        </div>
+    </div>
+    <br>
+    <div class ="full-width-container">
+        <div class="row">
+            <h1>Your Best Value Proposition</h1>
+            <p class="padding">we can use this space to write our content. This is a paragraph coming after the heading. 
+                For this, we are using paragraph tag.we can use this space to write our content. This is a paragraph coming after the heading. 
+                For this, we are using paragraph tag.</p>
+                <br>
+            <button class="button"  placeholder="">Get Started</button>
+            </div>
+            <div class="row2">
+                <iframe src="https://www.dictionary.com/" id="render-dictionary"></iframe>
+            </div>
+    </div>
+    
+
 	<!-- End your code -->
 
 	</div>
