--- a/src/Assignment-4/assignment4.html
+++ b/src/Assignment-4/assignment4.html
@@ -12,45 +12,13 @@
 	<div id="container">
 
 	<!-- Start your code from here -->
-	<!-- <header>
-			<img src=""/>
-			<nav>
-				<ul class="QuickAccess">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Things</a></li>
-					<li><a href="#">Stuff</a></li>
-				</ul>
-			</nav>
-		</header>
-		<main>
-			<section id="main-section"> 
-				<h1>A site about some dogs</h1>
-				<img src=""/>
-				<button>what are dogs</button>
-			</section>
-			<section id="sub-section">
-				<article> </article>
-				<article> </article>
-				<article> </article>
-			</section>
-		</main>
-		<footer>
-			<h1>Learn About Dogs Online</h1>
-			<nav>
-				<img src=""/>
-				<img src=""/>
-				<img src=""/>
-				<img src=""/>
-			</nav>
-			<a href="#">See this on Github</a>
-		</footer> -->
 		<header>
 			<img src="./assets/images/logo.png" class="logo"/>
 			<nav>
 				<ul>
-					<li><a href="#">How</a></li>
-					<li><a href="#">What</a></li>
-					<li><a href="#">Facts</a></li>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Things</a></li>
+					<li><a href="#">Stuff</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -61,7 +29,7 @@
 		</section>
 		<section class="content">
 			<article class="three-col" id="How">
-				<h3>How</h3>
+				<h2>Home</h2>
 				<img src="./assets/images/article1.jpg" class="roung-img"/>
 				<p>
 					The first thing we'll do is break this layout down into semantic HTML tags to help us clarify how we want to build the page. Let's write up the skeleton HTML so we have a roadmap to follow as we work.
@@ -69,15 +37,16 @@
 				<a href="#" class="btn">Go Home</a>
 			</article>
 			<article class="three-col" id="What">
-				<h3>What</h3>
+				<h2>Things</h2>
 				<img src="./assets/images/article2.jpg" class="roung-img"/>
 				<p>
+					The first thing we'll do is break this layout down into semantic HTML tags to help us clarify how we want to build the page. Let's write up the skeleton HTML so we have a roadmap to follow as we work.
 					The first thing we'll do is break this layout down into semantic HTML tags to help us clarify how we want to build the page. Let's write up the skeleton HTML so we have a roadmap to follow as we work.
 				</p>
 				<a href="#" class="btn">More Things</a>
 			</article>
 			<article class="three-col" id="Facts">
-				<h3>Facts</h3>
+				<h2>Stuff</h2>
 				<img src="./assets/images/article3.jpg" class="roung-img"/>
 				<p>
 					The first thing we'll do is break this layout down into semantic HTML tags to help us clarify how we want to build the page. Let's write up the skeleton HTML so we have a roadmap to follow as we work.
@@ -86,17 +55,15 @@
 			</article>
 		</section>
 		<footer>
-			<h4>Learn About Dogs Online</h4>
-			<ul>
+			<h3>Learn About Dogs Online</h3>
+			<nav>
 				<li><img src="./assets/images/fb.png"/></li>
 				<li><img src="./assets/images/IG.png"/></li>
 				<li><img src="./assets/images/linkedin.png"/></li>
 				<li><img src="./assets/images/twit.png"/></li>
-			</ul>
+			</nav>
 			<a href="#">See This On Github</a>
 		</footer>
-
-
 	<!-- End your code -->
 
 	</div>
