--- a/src/Assignment-5/assignment5.html
+++ b/src/Assignment-5/assignment5.html
@@ -12,7 +12,32 @@
 	<div id="container">
 
 	<!-- Start your code from here -->
-	
+	<div class="card">
+		<nav>
+			<article class="card-img">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-1.png"/>
+			</article>
+			<article class="card-content">
+				<h1>A leafy one</h1>
+				<p>Step 3:The left part of each row should contain a block with green color and an image should be placed in it with exceeding the block width Step 4:The right part of each row should contain a heading, paragraph and a button.
+					</p>
+				<button>SO LEAFY</button>
+			</article>
+		</nav>
+	</div>
+	<div class="card">
+		<nav>
+			<article class="card-img">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-4.png"/>
+			</article>
+			<article class="card-content">
+				<h1>Some pointy ones</h1>
+				<p>Step 3:The left part of each row should contain a block with green color and an image should be placed in it with exceeding the block width Step 4:The right part of each row should contain a heading, paragraph and a button.
+					</p>
+				<button>I'LL TAKE 10</button>
+			</article>
+		</nav>
+	</div>
 
 	<!-- End your code -->
 
