--- a/src/Assignment-5/assignment5.html
+++ b/src/Assignment-5/assignment5.html
@@ -12,33 +12,31 @@
 	<div id="container">
 
 	<!-- Start your code from here -->
+	
 	<div class="card">
-		<nav>
-			<article class="card-img">
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-1.png"/>
-			</article>
-			<article class="card-content">
-				<h1>A leafy one</h1>
-				<p>Step 3:The left part of each row should contain a block with green color and an image should be placed in it with exceeding the block width Step 4:The right part of each row should contain a heading, paragraph and a button.
-					</p>
-				<button>SO LEAFY</button>
-			</article>
-		</nav>
+		<section class="card-img">
+			<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-1.png"/>
+		</section>
+		<section class="card-content">
+			<h1>A leafy one</h1>
+			<p>Step 3:The left part of each row should contain a block with green color and an image should be placed in it with exceeding the block width Step 4:The right part of each row should contain a heading, paragraph and a button.
+				Step 3:The left part of each row should contain a block with green color and an image should be placed in it with exceeding the block width.
+				</p>
+			<button>SO LEAFY</button>
+		</section>
 	</div>
 	<div class="card">
-		<nav>
-			<article class="card-img">
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-4.png"/>
-			</article>
-			<article class="card-content">
-				<h1>Some pointy ones</h1>
-				<p>Step 3:The left part of each row should contain a block with green color and an image should be placed in it with exceeding the block width Step 4:The right part of each row should contain a heading, paragraph and a button.
-					</p>
-				<button>I'LL TAKE 10</button>
-			</article>
-		</nav>
+		<section class="card-img2">
+			<img id="img"src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-4.png"/>
+		</section>
+		<section class="card-content">
+			<h1>Some pointy ones</h1>
+			<p>Step 3:The left part of each row should contain a block with green color and an image should be placed in it with exceeding the block width Step 4:The right part of each row should contain a heading, paragraph and a button.
+				Step 3:The left part of each row should contain a block with green color and an image should be placed in it with exceeding the block width.
+				</p>
+			<button href="#">I'LL TAKE 10</button>
+		</section>
 	</div>
-
 	<!-- End your code -->
 
 	</div>
